<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.autopneutest.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_catalog"
        android:name="com.example.autopneutest.ui.gallery.CatalogFragment"
        android:label="@string/catalog"
        tools:layout="@layout/catalog_fragment" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.autopneutest.ui.slideshow.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.autopneutest.ui.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />

</navigation>
